2006-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix *SetPATH handler

2006-03-01  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: Don't whine if status db not yet loaded.

2006-03-01  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: Instead of manually toggling _invalid, store data
	about dpkg status file when reading it, compare stored vs actual
	to determine whether cache is stale.
	* PkgVersion.pm, Status.pm: Abolish Status::invalidate

2006-02-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* SysState.pm:
		- Nicer error messages when resolving deps.
		- Don't accept "resolutions" that uninstall some of the packages that
		we are trying to install.
		- Recognize when buildlocks are in the way.
	* PkgVersion.pm: Don't print the "propagated at" for propagated die's.

2006-02-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Command.pm: When lchown is available, chowname_hr should affect links.
	There's no lchown in perl, so we system() it.

2006-02-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: get_aptdb was stomping on $_, which happened to be
	a Package object. Damn global variables...

2006-02-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Add methods to check whether the bindist is available, based
	on the current distribution and prefix.
	* Engine.pm, PkgVersion.pm, Configure.pm: Replace existing checks for
	bindist availability with calls to the new methods in Config. Now if we
	want to allow UseBinaryDist for private dists, there's just one place to
	change.
	* Config.pm: Don't write the bindist entries to sources.list unless the
	bindist is actually available.

2006-02-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: If buildlock is in an unfamiliar environment, allow
	removal. This can occur when injecting a new fink.

2006-02-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: A bit of cleanup on the termination of process().
