@@ -1,3 +1,8 @@
+2006-03-14  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Do not issue repeated warnings about the same
+	BuildDependsOnly violation
+
 2006-03-06  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Fix *SetPATH handler
